# TriggerHappyRemote-iOS

./: README.md  README.txt
AppStore/: icon.psd
AppleDistribution/: CertificateSigningRequest.certSigningRequest
ExampleProjects/KevinCoreAudioHelloWord/KevinCoreAudioHelloWord/: AppDelegate.h  AppDelegate.m  AudioController.h  AudioController.mm  KevinCoreAudioHelloWord-Info.plist  KevinCoreAudioHelloWord-Prefix.pch  ViewController.h  ViewController.m  ViewController.mm  main.m
ExampleProjects/KevinCoreAudioHelloWord/KevinCoreAudioHelloWord.xcodeproj/: project.pbxproj
ExampleProjects/KevinCoreAudioHelloWord/KevinCoreAudioHelloWordTests/: KevinCoreAudioHelloWordTests-Info.plist  KevinCoreAudioHelloWordTests.h  KevinCoreAudioHelloWordTests.m
ExampleProjects/OpenALSynthesizer/OpenALSynthesizer/: 1second.caf  OpenALSynthesizer-Prefix.pch  OpenALSynthesizer.h  OpenALSynthesizer.m  Trigger_HappyAppDelegate.h  Trigger_HappyAppDelegate.m  Trigger_HappyViewController.h  Trigger_HappyViewController.m  main.m
ExampleProjects/OpenALSynthesizer/OpenALSynthesizer.xcodeproj/: project.pbxproj
ExampleProjects/OpenALSynthesizer/OpenALSynthesizerTests/: OpenALSynthesizerTests-Info.plist  OpenALSynthesizerTests.h  OpenALSynthesizerTests.m
ExampleProjects/ToneMapping/ToneMapping/: AppDelegate.h  AppDelegate.m  HDRToneMapper.h  HDRToneMapper.m  MainViewController.h  MainViewController.m  MasterViewController.h  MasterViewController.m  ResultsViewController.h  ResultsViewController.m  SettingsViewController.h  SettingsViewController.m  ToneMapping-Info.plist  ToneMapping-Prefix.pch  main.m
ExampleProjects/ToneMapping/ToneMapping.xcodeproj/: project.pbxproj
ExampleProjects/ToneMapping/pfstools-1.8.4/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.Cygwin  README.OSX  README.matlab  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
ExampleProjects/ToneMapping/pfstools-1.8.4/doc/: Makefile.am  Makefile.in
ExampleProjects/ToneMapping/pfstools-1.8.4/src/: Makefile.am  Makefile.in
ExampleProjects/ToneMapping/pfstools-1.8.4/src/fileformat/: Makefile.am  Makefile.in  hdrtiffio.cpp  pfsin  pfsin.in  pfsindcraw  pfsindcraw.1  pfsindcraw.in  pfsinexr.cpp  pfsinimgmagick.cpp  pfsinmulti  pfsinrgbe.1  pfsinrgbe.cpp  pfsout  pfsout.in  pfsoutexr.cpp  pfsoutppm.1  pfsoutrgbe.cpp  rgbeio.cpp  rgbeio.h
ExampleProjects/ToneMapping/pfstools-1.8.4/src/filter/: Makefile.am  Makefile.in  display_function.cpp  pfsclamp.cpp  pfscut.cpp  pfsextractchannels.cpp  pfsgamma.cpp  pfspad.cpp  pfspanoramic.cpp
ExampleProjects/ToneMapping/pfstools-1.8.4/src/hdrhtml/: Makefile.am  Makefile.in  hdrhtml.cpp
ExampleProjects/ToneMapping/pfstools-1.8.4/src/matlab/: Makefile.am  Makefile.in  pfs_shell.m  pfs_transform_colorspace.cpp
ExampleProjects/ToneMapping/pfstools-1.8.4/src/octave/: Makefile.am  Makefile.in  pfsclose_help.h  pfsget_help.h  pfsopen_help.h  pfsput_help.h  pfsread_help.h  pfstransform_colorspace_help.h  pfswrite_help.h
ExampleProjects/ToneMapping/pfstools-1.8.4/src/pfs/: Makefile.am  Makefile.in  pfs.cpp  pfs.pc.in
ExampleProjects/ToneMapping/pfstools-1.8.4/src/pfsglview/: Makefile.am  Makefile.in  glenv.h  pfsglview.cpp  picture_io.cpp  picture_io.h  rmglwin.cpp  rmglwin.h
ExampleProjects/ToneMapping/pfstools-1.8.4/src/pfsview/: Makefile.am  Makefile.in  luminancerange_widget.cpp  luminancerange_widget.h  pfsview_widget.cpp
Trigger Happy/Trigger Happy/: AppDelegate.h  AppDelegate.m  Trigger Happy-Info.plist  main.m
Trigger Happy/Trigger Happy.xcodeproj/: project.pbxproj
Trigger Happy/Trigger Happy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Trigger Happy/Trigger Happy/Trigger_Happy.xcdatamodeld/: .xccurrentversion
Trigger Happy/Trigger HappyTests/: Trigger HappyTests-Info.plist  Trigger_HappyTests.m
UIDesign/: Untitled.rtf
iOS iPhone/DerivedData/Trigger Happy/: info.plist
iOS iPhone/DerivedData/Trigger Happy Lite/: info.plist
iOS iPhone/Trigger Happy.xcodeproj/: Kevin.mode1v3  Kevin.pbxuser  project.pbxproj
iOS iPhone/Trigger-Happy.xcodeproj/: project.pbxproj
iOS iPhone/camera-remote/: AppDelegate.h  AppDelegate.m  AudioOutputCameraController.h  AudioOutputCameraController.m  AudioOutputController.h  AudioOutputController.m  BluetoothCameraController.m  Bramper.h  Bramper.m  BrampingStartShutterSelectorViewController.h  BrampingStartShutterSelectorViewController.m  BrampingStopShutterSelectorViewController.h  BrampingStopShutterSelectorViewController.m  BrampingViewController.h  BrampingViewController.m  BulbModel.h  BulbModel.m  Constants.h  DurationViewController.h  DurationViewController.m  FaceDetectionViewController.h  FaceDetectionViewController.m  FirstViewController.h  FirstViewController.m  HDR.h  HDR.m  HDREVViewController.h  HDREVViewController.m  HDRShotsViewController.h  HDRShotsViewController.m  HDRShutterSelectorViewController.h  HDRShutterSelectorViewController.m  HDRViewController.h  HDRViewController.m  ICameraController.h  ICameraController.m  IDataAccessViewController.m  IIntervalometer.h  IIntervalometer.m  IShutterSelectorViewController.h  (+44 more)
iOS iPhone/camera-remote.xcodeproj/: project.pbxproj
iOS iPhone/camera-remoteTests/: camera-remoteTests-Info.plist  camera_remoteTests.h  camera_remoteTests.m
iOS iPhone/images/: aboutpage.psd  endshutterbutton.psd  fire-button.psd  hdrview.psd  hdrview2.psd  logo1small.psd  setterbutton.psd
iOS iPhone/src/: FeatureCell.h  FeatureCell.m
iOS iPhone/supportingFiles/: Trigger Happy-Info.plist  main.m
iOS iPhone/testing/: build1.0.3testPlan.xlsx  ~$build1.0.3testPlan.xlsx
triggerhappyremote/triggerhappyremote/: Trigger_HappyAppDelegate.h  Trigger_HappyAppDelegate.m  Trigger_HappyDetailViewController.h  Trigger_HappyDetailViewController.m  Trigger_HappyMasterViewController.h  Trigger_HappyMasterViewController.m  main.m  triggerhappyremote-Info.plist  triggerhappyremote-Prefix.pch
triggerhappyremote/triggerhappyremote.xcodeproj/: project.pbxproj
triggerhappyremote/triggerhappyremoteTests/: triggerhappyremoteTests.h  triggerhappyremoteTests.m
(+800 files in other folders)
