###
if OCTAVE_SUPPORT
  OCTAVE_DIR = octave
endif
if QT_SUPPORT
  QT_DIR = pfsview
endif
if GL_SUPPORT
  GL_DIR = pfsglview
endif
if MATLAB_SUPPORT
  MATLAB_DIR = matlab
endif
if IMAGEMAGICK_SUPPORT
  HDRHTML_DIR = hdrhtml
endif
SUBDIRS = pfs fileformat filter $(OCTAVE_DIR) $(QT_DIR) $(GL_DIR) $(MATLAB_DIR) $(HDRHTML_DIR)
